partially fix error message jump

--- a/src/scss/_checkbox.scss
+++ b/src/scss/_checkbox.scss
@@ -63,9 +63,5 @@
 				padding-top: 12px; 
 			}
 		}
-
-		.o-forms-input__error {
-			@include oTypographyMargin($top: 2);
-		}
 	}
 }
