--- a/src/scss/shared/_validity.scss
+++ b/src/scss/shared/_validity.scss
@@ -21,10 +21,12 @@
 		}
 
 		.o-forms-input__error {
-			@include oTypographyMargin($top: 1);
+			// @include oTypographyMargin($top: 1);
 			@include oTypographySize($scale: -1);
 			color: _oFormsGet('invalid-base');
 			display: block;
+			position: absolute;
+			bottom: -22px;
 		}
 	}
 }
